# ansible-collection

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  ansible.cfg  cliff.toml  galaxy.yml  pyproject.toml  requirements.yml  zizmor.yml
.github/: file-filters.yml
.github/workflows/: main.yml
molecule/playbooks/: prepare-systemctl.yml  prepare-systemd.yml
plugins/modules/: linger.py
plugins/tests/molecule/hello_world/: molecule.yml
plugins/tests/molecule/linger/: molecule.yml
roles/aptup/meta/: argument_specs.yml
roles/aptup/molecule/aptup/: molecule.yml
roles/aptup/molecule/aptup_vagrant/: molecule.yml
roles/aptup/tasks/: codenames.yml  main.yml  next_release.yml  upgrade.yml
roles/docker/handlers/: main.yml
roles/docker/meta/: argument_specs.yml
roles/docker/molecule/docker_vagrant/: molecule.yml
roles/docker/tasks/: cleanup.yml  configs.yml  install.yml  main.yml  rootless.yml  uninstall.yml
roles/docker/vars/: main.yml
roles/docker_compose/: README.md
roles/docker_compose/handlers/: main.yml
roles/docker_compose/meta/: argument_specs.yml
roles/docker_compose/molecule/docker_compose/: converge.yml
roles/docker_compose/molecule/docker_compose/files/: docker-compose.yml
roles/docker_compose/tasks/: deploy.yml  main.yml  remove.yml
roles/reboot/: README.md
roles/reboot/meta/: argument_specs.yml
roles/reboot/tasks/: main.yml
roles/system_info/tasks/: main.yml
roles/wireguard/molecule/wireguard/: converge.yml  molecule.yml
roles/wireguard/tasks/: debug.yml  main.yml
