[project]
name            = "ansible-collection"
description     = "Ansible Collection"
version         = "0.0.0"
readme          = "README.md"
license         = "MIT"
authors         = [{ name = "deadnews", email = "deadnewsgit@gmail.com" }]
requires-python = ">=3.12"

dependencies = ["ansible-core>=2.18.6"]

[dependency-groups]
dev = [
  "ansible-lint>=26.1.0",
  "galaxy-update>=1.0.0",
  "molecule-plugins[docker,vagrant]>=23.7.0",
  "molecule>=25.6.0",
  "pytest-ansible>=25.6.2",
  "pytest>=8.4.1",
  "ruff>=0.14.11",
  "ty>=0.0.11",
]

[tool.ruff]
line-length        = 99
format.line-ending = "lf"

[tool.ruff.lint]
flake8-tidy-imports.ban-relative-imports = "all"
pycodestyle.max-doc-length               = 129
pycodestyle.max-line-length              = 129
pydocstyle.convention                    = "google"

select = ["ALL"]
ignore = [
  "COM812",  # Trailing comma missing
  "FBT001",  # Boolean positional arg in function definition
  "FBT002",  # Boolean default value in function definition
  "ISC001",  # Checks for implicitly concatenated strings on a single line
  "PLR0913", # Too many arguments to function call
  #
  "S603", # Check for execution of untrusted input
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*"     = ["ANN", "D", "E501", "PLC1901", "PLR2004", "S"]

[tool.pytest.ini_options]
addopts   = "--verbose"
testpaths = ["tests"]
markers   = ["docker", "molecule", "no_driver", "vagrant"]

[tool.coverage.report]
exclude_lines = [
  "# pragma: no cover",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
